--- a/tp3/deploiement_repartition/loadBalancing_etudiants2.yaml
+++ b/tp3/deploiement_repartition/loadBalancing_etudiants2.yaml
@@ -34,6 +34,11 @@ parameters:
     default: 80
     description: Port used by the load balancer
 
+  protocol_port:
+    type: number
+    default: 8080
+    description: port for pool memeber protocol
+
     # Vous pouvez ajouter d'autres paramètres
     # Il faut bien définir les descriptions, les valeurs par default et les contraintes
 
@@ -41,33 +46,51 @@ resources:
   server1:
       type: OS::Nova::Server
       properties:
-        key_name: Lab1Key
-        networks: [{ network: { get_param: NetID }}]
+        networks:
+            - network: { get_param: NetID }
         image: { get_param: image }
         flavor: { get_param: flavor }
-
+        user_data:  |
+            #!/bin/bash
+            sudo apt-get update -y
+            sudo apt install -y python
+            wget "https://raw.githubusercontent.com/houssemmh/INF8480-TP3/master/server.py"
+            python server.py
+            
   server2:
       type: OS::Nova::Server
       properties:
-        key_name: Lab1Key
-        networks: [{ network: { get_param: NetID }}]
+        networks:
+            - network: { get_param: NetID }
         image: { get_param: image }
         flavor: { get_param: flavor }
+        user_data:  |
+            #!/bin/bash
+            sudo apt-get update -y
+            sudo apt install -y python
+            wget "https://raw.githubusercontent.com/houssemmh/INF8480-TP3/master/server.py"
+            python server.py
 
   server3:
       type: OS::Nova::Server
       properties:
-        key_name: Lab1Key
-        networks: [{ network: { get_param: NetID }}]
+        networks:
+            - network: { get_param: NetID }
         image: { get_param: image }
         flavor: { get_param: flavor }
+        user_data:  |
+            #!/bin/bash
+            sudo apt-get update -y
+            sudo apt install -y python
+            wget "https://raw.githubusercontent.com/houssemmh/INF8480-TP3/master/server.py"
+            python server.py
   
   pool_member1:
     type: OS::Neutron::LBaaS::PoolMember
     properties:
       pool: { get_resource: mypool }
       address: { get_attr: [ server1, first_address ]}
-      protocol_port: { get_param: lb_port }
+      protocol_port: { get_param: protocol_port }
       subnet: { get_param: subnetId }
 
   pool_member2:
@@ -75,7 +98,7 @@ resources:
     properties:
       pool: { get_resource: mypool }
       address: { get_attr: [ server2, first_address ]}
-      protocol_port: { get_param: lb_port }
+      protocol_port: { get_param: protocol_port }
       subnet: { get_param: subnetId }
 
   pool_member3:
@@ -83,7 +106,7 @@ resources:
     properties:
       pool: { get_resource: mypool }
       address: { get_attr: [ server3, first_address ]}
-      protocol_port: { get_param: lb_port }
+      protocol_port: { get_param: protocol_port }
       subnet: { get_param: subnetId }
 
   mypool:
@@ -91,7 +114,6 @@ resources:
       description: The system nodes
       properties:
         lb_algorithm: ROUND_ROBIN
-        loadbalancer: { get_resource: myloadbalancer }
         protocol: HTTP
         listener: { get_resource: listener }
 
@@ -108,17 +130,6 @@ resources:
       properties:
         vip_subnet: { get_param: subnetId }
 
-  floating_ip:
-    type: OS::Neutron::FloatingIP
-    properties:
-      floating_network: { get_param: NetID_external }
-
-  floatingIP_association:
-    type: OS::Neutron::FloatingIPAssociation
-    properties:
-      floatingip_id: { get_resource: floating_ip }
-      port_id: {get_attr: [myloadbalancer, vip_port_id]}
-
   mymonitor:
       type: OS::Neutron::LBaaS::HealthMonitor
       description: The health monitor
@@ -129,14 +140,3 @@ resources:
         timeout: 5000
         type: HTTP
 
-outputs:
-  lburl:
-    value:
-      str_replace:
-        template: http://IP_ADDRESS:PORT
-        params:
-          IP_ADDRESS: { get_attr: [ floating_ip, floating_ip_address ] }
-          PORT: { get_param: lb_port }
-    description: >
-      This URL is the "external" URL that can be used to access the
-      load balancer.
